--- a/python-imports.cfg
+++ b/python-imports.cfg
@@ -11,6 +11,7 @@ from functools import wraps, partial
 from operator import itemgetter, attrgetter
 from cStringIO import StringIO
 from contextlib import contextmanager
+from contextlib import closing
 
 # my stuff
 from profilehooks import coverage, profile, timecall
